# gema-chall

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
data/: sample.csv
pipeline/: database.py  enrichment.py  ingest.py  models.py  processor.py
tests/: test_models.py  test_processor.py
